gccida/c0/decode_d_option
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_d_option/src/toplev.c:4307:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.set_yydebug( 1); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_d_option/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_d_option/src/obj/toplev.o] Error 1
